* FEA#6439 Allow to sum lines in aged balance

Version 1.12 - 2017-04-28

Version 1.10 - 2016-11-02

Version 1.8 - 2016-07-06
* FEA#0000 Add hook to customize split moves description
* FEA#0000 Allow to automatically post writeoff moves
* FEA#0000 Allow to automatically post reconciliation moves
* FEA#0000 Launch reconciliation wizard from party
* FEA#0000 Allow to auto post move templates

Version 1.6 - 2015-12-23
* FEA#0000 Differentiate money direction with field (payable/receivable) and not with sign
* FEA#0000 New simplified party balance with colors and icons

Version 1.4 - 2015-05-29

Version 1.3 - 2015-01-22
* FEA#0000 Allow to filter third party balance per account
* FEA#0000 Pad fiscal years sequences

Version 1.2 - 2014-07-01
* FEA#0000 Changelog file creation