@@ -2,48 +2,48 @@
 # this repository contains the full copyright notices and license terms.
 from trytond.pool import Pool
 
-from .account import *
-from .company import *
-from .tax import *
-from .test_case import *
-from .party import *
-from .move import *
+import account
+import company
+import tax
+import test_case
+import party
+import move
 
 
 def register():
     Pool.register(
-        MoveTemplate,
-        Move,
-        Line,
-        ReconcileShow,
-        ReconcileLinesWriteOff,
-        Account,
-        AccountTemplate,
-        AccountTypeTemplate,
-        AccountKind,
-        Journal,
-        FiscalYear,
-        Period,
-        Configuration,
-        Company,
-        Tax,
-        TaxTemplate,
-        TaxCodeTemplate,
-        TaxCode,
-        TaxGroup,
-        TestCaseModel,
-        Party,
-        SynthesisMenuMoveLine,
-        SynthesisMenu,
-        OpenThirdPartyBalanceStart,
+        move.MoveTemplate,
+        move.Move,
+        move.Line,
+        move.ReconcileShow,
+        move.ReconcileLinesWriteOff,
+        account.Account,
+        account.AccountTemplate,
+        account.AccountTypeTemplate,
+        account.AccountKind,
+        account.Journal,
+        account.FiscalYear,
+        account.Period,
+        account.Configuration,
+        company.Company,
+        tax.Tax,
+        tax.TaxTemplate,
+        tax.TaxCodeTemplate,
+        tax.TaxCode,
+        tax.TaxGroup,
+        test_case.TestCaseModel,
+        party.Party,
+        party.SynthesisMenuMoveLine,
+        party.SynthesisMenu,
+        account.OpenThirdPartyBalanceStart,
         module='account_cog', type_='model')
     Pool.register(
-        Reconcile,
-        ReconcileLines,
-        SynthesisMenuOpen,
-        OpenThirdPartyBalance,
-        CreateMove,
+        move.Reconcile,
+        move.ReconcileLines,
+        party.SynthesisMenuOpen,
+        account.OpenThirdPartyBalance,
+        move.CreateMove,
         module='account_cog', type_='wizard')
     Pool.register(
-        ThirdPartyBalance,
+        account.ThirdPartyBalance,
         module='account', type_='report')
