@@ -1,3 +1,4 @@
+* FEA#6549 Amélioration des performances du calcul du mouvement d'annulation
 * FEA#6439 Possibilité de sommer des lignes intérmédiaires dans la balance agée
 
 Version 1.12 - 2017-04-28
