@@ -1,3 +1,4 @@
+* FEA#6549 Improve performances for the cancel move field calculation
 * FEA#6439 Allow to sum lines in aged balance
 
 Version 1.12 - 2017-04-28
